# thesis

./: bootstrap.py  init_tables.py  mypy.ini  pyproject.toml  tables.db  tabua.csv
actuarial/: discounting.py  utils.py
actuarial/db/: session.py
actuarial/db/mappings/: lives.py  table.py
actuarial/management/: block_of_business.py  expense_plan.py  policy.py
actuarial/mortality/: import_csv.py  table.py
actuarial/products/: annuity.py  benefit.py  cf_series.py  insurance.py  simple_getters.py
data/: MOCK_DATA.csv
data/tables/: BR-f.csv  BR-m.csv  SULT.csv
samples/: demo.py  dpg.py  sample_1.py  sample_2.py  sample_3.py  testing.py
tex/: .gitignore  thesis.aux  thesis.bbl  thesis.bcf  thesis.bib  thesis.blg  thesis.dvi  thesis.fdb_latexmk  thesis.fls  thesis.run.xml  thesis.tex  thesis.tex.blg  thesis.toc  thesisi.blg
