[tool.poetry]
name = "actuarial"
version = "0.1.0"
description = "An actuarial forecasting tool."
authors = ["Matheus Barcellos <mathbar4@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.22.2"
pandas = "^1.4.0"
SQLAlchemy = "^1.4.31"
sympy = "^1.9"

[tool.poetry.dev-dependencies]
mypy = "^0.931"
flake8 = "^4.0.1"
black = "^22.1.0"
pytest = "^7.0.0"
SQLAlchemy = {extras = ["mypy"], version = "^1.4.31"}
pandas-stubs = "^1.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
